Updated the API project to include database access

--- a/SCHEMING-DEVICE.Api/SCHEMING-DEVICE.Api.csproj
+++ b/SCHEMING-DEVICE.Api/SCHEMING-DEVICE.Api.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SCHEMING-DEVICE.Domain\SCHEMING-DEVICE.Domain.csproj" />
+    <ProjectReference Include="..\SCHEMING-DEVICE.Data\SCHEMING-DEVICE.Data.csproj" />
   </ItemGroup>
 
 </Project>
