--- a/SCHEMING-DEVICE.Data/SCHEMING-DEVICE.Data.csproj
+++ b/SCHEMING-DEVICE.Data/SCHEMING-DEVICE.Data.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\SCHEMING-DEVICE.Domain\SCHEMING-DEVICE.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <RootNamespace>SCHEMING_DEVICE.Data</RootNamespace>
