Configure API to Use Azure SQL

--- a/SCHEMING-DEVICE.Api/appsettings.json
+++ b/SCHEMING-DEVICE.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StoreConnection": "Server=tcp:scheming-device-sql.database.windows.net,1433;Initial Catalog=scheming-device-sql-db;Persist Security Info=False;User ID=scheming-device;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
